--- a/Rsss/DatabaseDll/DatabaseDll.csproj
+++ b/Rsss/DatabaseDll/DatabaseDll.csproj
@@ -62,11 +62,10 @@
     <Compile Include="rssReader\RssManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
